--- a/ui.html
+++ b/ui.html
@@ -202,7 +202,7 @@
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
